syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

message GlobalCommandScope {
}

message InstanceCommandScope {
  string instance_id = 1;
}

message CommandScope {
  oneof scope {
    GlobalCommandScope global = 1;
    InstanceCommandScope instance = 2;
  }
}

message CommandRequest {
  CommandScope scope = 4;
  string command = 3;
}

message CommandResponse {
  int32 code = 1;
}

message CommandCompletionRequest {
  CommandScope scope = 5;
  string command = 3;
  int32 cursor = 4;
}

message CommandCompletion {
  string suggestion = 1;
  optional string tooltip = 2;
}

message CommandCompletionResponse {
  repeated CommandCompletion suggestions = 1;
}

service CommandService {
  rpc ExecuteCommand (CommandRequest) returns (CommandResponse) {}
  rpc TabCompleteCommand (CommandCompletionRequest) returns (CommandCompletionResponse) {}
}
