syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "google/protobuf/struct.proto";

message ProxyProto {
  enum Type {
    HTTP = 0;
    SOCKS4 = 1;
    SOCKS5 = 2;
  }

  Type type = 1;
  string address = 2;
  optional string username = 3;
  optional string password = 4;
}

enum AccountTypeCredentials {
  MICROSOFT_JAVA_CREDENTIALS = 0;
  MICROSOFT_BEDROCK_CREDENTIALS = 1;
  THE_ALTENING = 3;
  OFFLINE = 4;
  MICROSOFT_JAVA_REFRESH_TOKEN = 5;
}

enum AccountTypeDeviceCode {
  MICROSOFT_JAVA_DEVICE_CODE = 0;
  MICROSOFT_BEDROCK_DEVICE_CODE = 1;
}

message MinecraftAccountProto {
  enum AccountTypeProto {
    MICROSOFT_JAVA_CREDENTIALS = 0;
    MICROSOFT_BEDROCK_CREDENTIALS = 1;
    THE_ALTENING = 3;
    OFFLINE = 4;
    MICROSOFT_JAVA_DEVICE_CODE = 5;
    MICROSOFT_BEDROCK_DEVICE_CODE = 6;
    MICROSOFT_JAVA_REFRESH_TOKEN = 7;
  }

  message OnlineSimpleJavaData {
    string authToken = 1;
    int64 tokenExpireAt = 2;
  }

  message OnlineChainJavaData {
    string authToken = 1;
    int64 tokenExpireAt = 2;
    google.protobuf.Struct authChain = 3;
  }

  message OfflineJavaData {
  }

  message BedrockData {
    string mojangJwt = 1;
    string identityJwt = 2;
    string publicKey = 3;
    string privateKey = 4;
    string deviceId = 5;
    string playFabId = 6;
    google.protobuf.Struct authChain = 7;
  }

  AccountTypeProto type = 1;
  string profileId = 2;
  string lastKnownName = 3;
  oneof accountData {
    OnlineSimpleJavaData onlineSimpleJavaData = 4;
    OnlineChainJavaData onlineChainJavaData = 5;
    OfflineJavaData offlineJavaData = 6;
    BedrockData bedrockData = 7;
  }
}

message SettingsEntry {
  string key = 1;
  google.protobuf.Value value = 2;
}

message SettingsNamespace {
  string namespace = 1;
  repeated SettingsEntry entries = 2;
}

enum GlobalPermission {
  CREATE_INSTANCE = 0;
  SUBSCRIBE_LOGS = 1;
  READ_CLIENT_DATA = 2;
  READ_SERVER_CONFIG = 3;
  UPDATE_SERVER_CONFIG = 4;
  CREATE_USER = 5;
  READ_USER = 6;
  UPDATE_USER = 7;
  DELETE_USER = 8;
}

enum InstancePermission {
  COMMAND_EXECUTION = 0;
  COMMAND_COMPLETION = 1;
  READ_INSTANCE = 2;
  UPDATE_INSTANCE = 3;
  DELETE_INSTANCE = 4;
  CHANGE_INSTANCE_STATE = 5;
  AUTHENTICATE_MC_ACCOUNT = 6;
  CHECK_PROXY = 7;
  DOWNLOAD_URL = 8;
  UPLOAD_OBJECT_STORAGE = 9;
  DOWNLOAD_OBJECT_STORAGE = 10;
  DELETE_OBJECT_STORAGE = 11;
  LIST_OBJECT_STORAGE = 12;
}

enum UserRole {
  ADMIN = 0;
  USER = 1;
}
